@@ -46,7 +46,7 @@ static void on_button_clicked( GtkButton *button, CustomElement* el );
 void on_combo_changed( GtkComboBox* box, CustomElement* el );
 static gboolean on_timeout_timer( CustomElement* el );
 static gboolean press_last_button( GtkWidget* dlg );
-static void on_dlg_close( GtkDialog* dlg );
+static void on_dlg_delete( GtkDialog* dlg );
 static gboolean on_progress_timer( CustomElement* el );
 
 GtkWidget* signal_dialog = NULL;  // make this a list if supporting multiple dialogs
@@ -1960,10 +1960,6 @@ static void free_elements( GList* elements )
 static gboolean destroy_dlg( GtkWidget* dlg )
 {
     GList* elements = (GList*)g_object_get_data( G_OBJECT( dlg ), "elements" );
-
-    // remove destroy signal connect
-    g_signal_handlers_disconnect_by_func( G_OBJECT( dlg ),
-                                            G_CALLBACK( on_dlg_close ), NULL );
     gtk_widget_destroy( GTK_WIDGET( dlg ) );
     free_elements( elements );
     gtk_main_quit();
@@ -2273,7 +2269,7 @@ static void write_source( GtkWidget* dlg, CustomElement* el_pressed,
     g_free( str );
 }
 
-static void on_dlg_close( GtkDialog* dlg )
+static void on_dlg_delete( GtkDialog* dlg )
 {
     write_source( GTK_WIDGET( dlg ), NULL, stdout );
     destroy_dlg( GTK_WIDGET( dlg ) );
@@ -3571,7 +3567,8 @@ static void build_dialog( GList* elements )
     if ( pixbuf )
         gtk_window_set_icon( GTK_WINDOW( dlg ), pixbuf ); 
     g_object_set_data( G_OBJECT( dlg ), "elements", elements );
-    g_signal_connect( G_OBJECT( dlg ), "destroy", G_CALLBACK( on_dlg_close ), NULL );
+    g_signal_connect( G_OBJECT( dlg ), "delete-event",
+                                        G_CALLBACK( on_dlg_delete ), NULL );
 
     // pack some boxes to create horizonal padding at edges of window
     GtkWidget* hbox = gtk_hbox_new( FALSE, 0 );
