@@ -1,5 +1,6 @@
 0.9.2+
     fix memory leak on draw selection rectangle on desktop #397
+    [Dialog] fix returned windowsize=1x1 [GTK 3.8+]
 0.9.2   2013-12-06:
     README correct packages link
     manual note full/max col widths not saved #382
